# aura-calendar

./: AGENTS.md  Cargo.toml  README.md  agents.md  tauri.conf.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  close-issues-on-merge.yml  release.yml
docs/: git-workflow.md  guide.md
icons/: icon.icns
src/: calendar.rs  config.rs  format.rs  main.rs
src/app/: commands.rs  mod.rs  tray.rs
src/config/: mod.rs
src/services/: calendar.rs
src/ui/: icon.rs
