[package]
name = "aura-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 非同期処理
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
