[package]
name = "aura-calendar"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 非同期処理
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rrule = "0.13"
thiserror = "2"
minijinja = "2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
